# sophia

./: .gitignore  .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package.json  tsconfig.json
examples/: imageSearch1.ts  imageSearch2.ts  keyboard1.ts  keyboard2.ts  keyboard3.ts  memory1.ts  mouse1.ts  window1.ts  window2.ts
npm/win32-x64-msvc/: README.md  package.json
src/: display.rs  geometry.rs  lib.rs  screen.rs  utils.rs
src/win/: display.rs  keyboard.rs  keyboard_mouse.rs  memory.rs  mod.rs  mouse.rs  screen.rs  window.rs
