[package]
edition = "2021"
name = "sophia"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.9.1", features = ["tokio_rt"] }
napi-derive = "2.9.1"
image = "0.24.3"
tokio = { version = "1.21.1", features = ["full"] }
bitflags = "2.5.0"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
