[package]
edition = "2021"
name = "sophia"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", features = ["tokio_rt", "napi6"] }
napi-derive = "2.16.0"
image = "0.25.0"
tokio = { version = "1.21.1", features = ["full"] }
lazy_static = "1.4.0"
crossbeam-channel = "0.5.12"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
]

[build-dependencies]
napi-build = "2.1.2"

[profile.release]
lto = true
